crates/shell/src/shells/snapshots/starbase_shell__shells__dash__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/dash.rs
expression: "Dash::new().format_hook(Hook::Activate\n{\n    command: \"starbase hook dash\".into(), function: \"_starbase_hook\".into(),\n}).unwrap()"
---
_starbase_hook() {
  _starbase_hook_output=$(starbase hook dash)
  if [ -n "$_starbase_hook_output" ]; then
    eval "$_starbase_hook_output"
  fi
  unset _starbase_hook_output
}
