crates/shell/src/shells/snapshots/starbase_shell__shells__dash__tests__formats_register_handlers_hook.snap
---
source: crates/shell/src/shells/dash.rs
expression: "Dash::new().format_hook(Hook::RegisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# POSIX shells have no change-dir or prompt hook, so `cd` is shadowed. This
# clobbers any other `cd` wrapper, as there is no way to chain functions
cd() {
  command cd "$@" || return $?
  _starbase_hook
  return 0
}
