crates/shell/src/shells/snapshots/starbase_shell__shells__dash__tests__formats_unregister_handlers_hook.snap
---
source: crates/shell/src/shells/dash.rs
expression: "Dash::new().format_hook(Hook::UnregisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# Dropping the shadow restores the builtin, which is all a POSIX shell has
unset -f cd
